--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,9 +61,9 @@ jobs:
         if: success()
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          GPR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > .npmrc
-          echo "//npm.pkg.github.com/:_authToken=$GPR_TOKEN" >> .npmrc
+          echo "//npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN" >> .npmrc
           npm publish --access public
           echo "Release published to npm and GitHub Package Registry"
