--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "domain-info-fetcher",
-  "version": "1.0.8",
-  "description": "A package to fetch information about a domain including SSL certificate, server, and DNS records",
+  "version": "1.1.0",
+  "description": "A package to fetch information about a domain including SSL/TLS certificate, server informations, DNS records and HTTP status codes",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": {
@@ -13,12 +13,16 @@
     "test": "jest"
   },
   "keywords": [
-    "domain",
+    "Domain infos",
+    "SSL certificate",
     "SSL",
-    "certificate",
-    "server",
+    "TLS certificate",
+    "TLS",
+    "server info",
+    "DNS records",
     "DNS",
-    "records"
+    "HTTP status codes",
+    "HTTP"
   ],
   "author": " Marcel Baklouti <marcel@baklouti.de>",
   "license": "MIT",
@@ -28,12 +32,12 @@
   "homepage": "https://github.com/marcelbaklouti/domain-info-fetcher#readme",
   "dependencies": {
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.0",
+    "@types/jest": "^29.5.1",
     "@types/node": "^18.15.3",
     "jest": "^29.5.0",
-    "ts-jest": "^29.0.5"
+    "ts-jest": "^29.1.0"
   }
 }
