--- a/package.json
+++ b/package.json
@@ -1,16 +1,32 @@
 {
   "name": "domain-info-fetcher",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "A package to fetch information about a domain including SSL/TLS certificate, server informations, DNS records and HTTP status codes",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "bin": {
+    "domain-info-fetcher": "dist/bin/cli.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/marcelbaklouti/domain-info-fetcher.git"
   },
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run build",
+    "clean": "rm -rf dist",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier --write \"**/*.ts\"",
+    "npm:lockfile": "npm i --package-lock-only",
+    "pnpm:lockfile": "pnpm install --lockfile-only",
+    "example": "ts-node examples/basic-usage.ts",
+    "example:multi": "ts-node examples/multiple-domains.ts",
+    "cli": "ts-node bin/cli.ts"
+  },
+  "engines": {
+    "node": ">=18.15.0"
   },
   "keywords": [
     "Domain infos",
@@ -31,13 +47,18 @@
   },
   "homepage": "https://github.com/marcelbaklouti/domain-info-fetcher#readme",
   "dependencies": {
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "chalk": "^5.4.1"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.14",
     "@types/node": "^18.15.3",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.1.0"
+    "@typescript-eslint/eslint-plugin": "^8.25.0",
+    "@typescript-eslint/parser": "^8.25.0",
+    "eslint": "^9.21.0",
+    "prettier": "^3.5.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
