--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,8 +8,11 @@
     "jest": true
   },
   "rules": {
-    "no-console": "warn",
     "@typescript-eslint/no-explicit-any": "warn",
-    "@typescript-eslint/explicit-function-return-type": "warn"
+    "@typescript-eslint/explicit-function-return-type": "warn",
+    "no-console": [
+      "error",
+      { "allow": ["log", "error", "warn", "info", "debug"] }
+    ]
   }
 }
